<?xml version="1.0"?>
<package>
  <name>qbmove_example</name>
  <version>0.0.1</version>
  <description>The qbmove_example package</description>
  <maintainer email="mike.ivanou@gmail.com">Mike Ivanou</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros</run_depend>
</package>
