<?xml version="1.0"?>
<package>
    <name>qbmove_msg</name>
    <version>0.0.0</version>
    <description>The ar601_msg package</description>
    <maintainer email="m.ivanov@innopolis.ru">Mike Ivanou</maintainer>
    <license>BSD</license>
    <author email="m.ivanov@innopolis.ru">Mike Ivanou</author>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <run_depend>rospy</run_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_runtime</build_depend>

    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>

</package>
