<?xml version="1.0"?>
<package format="2">
    <name>qbmove_msg</name>
    <version>0.0.0</version>
    <description>The qbmove_msg package</description>
    <maintainer email="mike.ivanou@gmail.com">Mike Ivanou</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
<export>
    <cpp cflags="-I${prefix}/msg"/>
</export>
</package>
