<?xml version="1.0"?>
<package>
  <name>qbmove_plugin</name>
  <version>0.0.1</version>
  <description>The qbmove_plugin package</description>
  <maintainer email="mike.ivanou@gmail.com">Mike Ivanou</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>qbmove_msg</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
</package>
