<?xml version="1.0"?>
<package format="2">
  <name>qbmove_real</name>
  <version>0.0.0</version>
  <description>The qb_real package</description>
  <maintainer email="mike.ivanou@gmail.com">Mike Ivanou</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>qbmove_msg</build_depend>
</package>
